# ceramic

./: .clang-format  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  build.sh  setup.py  tox.ini
.github/workflows/: tests.yml
src/: example.cpp  global.hpp  main.cpp  module.i  py_main.cpp  py_utils.hpp  pybind.cpp  tiles.cpp  tiles.hpp  utils.swg
src/action/: action.cpp  action.hpp  action.swg  action_pybind.cpp  game.cpp  game.hpp  game.swg
src/analysis/: all_arena.cpp  all_arena.hpp  analysis_player.cpp  analysis_player.hpp  arena.cpp  arena.hpp  arena_room.cpp  arena_room.hpp  groups_utils.hpp  pairs_arena.cpp  pairs_arena.hpp  py_arena.cpp
src/game/: action.cpp  action.hpp  action_pybind.cpp  arena.cpp  arena.hpp  game.cpp  game.hpp  observer.cpp  observer.hpp  player.cpp  player.hpp  py_game.cpp
src/players/: first_legal_player.cpp  first_legal_player.hpp  monte_carlo_player.cpp  monte_carlo_player.hpp  py_players.cpp  random_player.cpp  random_player.hpp  round_heuristic.hpp  terminal_player.cpp  terminal_player.hpp
src/rules/: py_rules.cpp  rules.cpp  rules.hpp
src/state/: center.cpp  center.hpp  factory.cpp  factory.hpp  factory.swg  panel.cpp  panel.hpp  panel.swg  parameters.cpp  parameters.hpp  parameters.swg  py_state.cpp  pyramid.cpp  pyramid.hpp  pyramid.swg  rules.cpp  rules.hpp  rules.swg  state.cpp  state.hpp  state.swg  state_pybind.cpp  tile.cpp  tile.hpp  tiles.cpp  tiles.hpp  tiles.swg  wall.cpp  wall.hpp  wall.swg
src/targets/: arena.cpp  lib_core.hpp  parsing.hpp  terminal-player.cpp  test.cpp
src/utils/: random.hpp
tests/: test_factory.py  test_panel.py  test_pyramid.py  test_rules.py  test_str.py  test_tile.py  test_tiles.py  test_wall.py
tests/arena/: test_arena.py
tests/game/: test_action.py  test_game.py
tests/state/: test_center.py  test_factory.py  test_panel.py  test_pyramid.py  test_rules.py  test_tile.py  test_tiles.py  test_wall.py
